# Dave_Logs

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
demos/: basic_demo.cpp  quick_demo.cpp
src/dave_logs/: dave_logs.cpp  dave_logs.h
